<resources>
    <string name="app_name">Autonomous</string>

    <string name="title_activity_camera">CameraActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="live_view">Live view</string>
    <string name="todo1">TODO</string>
    <string name="todo">TODO</string>
    <string name="location1">Location</string>
    <string name="location_rectangle">Location Rectangle</string>
    <string name="diagnostic">Diagnostic</string>
    <string name="dialog_image">Dialog Image</string>
    <string name="diag_rectangle">Diag Rectangle</string>
    <string name="remote_control">Remote control</string>
    <string name="wheel_image">Wheel Image</string>
    <string name="remote_rectangle">remote Rectangle</string>
    <string name="battery_status_image">Battery Status Image</string>
    <string name="speed_image">Speed Image</string>
    <string name="_1">1</string>
    <string name="m_s">m/s</string>
    <string name="rectangle_lock">Rectangle Lock</string>
    <string name="locked_image">Locked Image</string>
    <string name="rectangle_lights">Rectangle Lights</string>
    <string name="light_image">Light Image</string>
    <string name="rectangle_horn">Rectangle Horn</string>
    <string name="horn_image">Horn Image</string>
    <string name="rectangle_stop">Rectangle Stop</string>
    <string name="stop_image">Stop Image</string>
    <string name="location_image">Location Image</string>
    <string name="battery_status">Battery Status</string>
    <string name="back_arrow_button1">Back Arrow Button</string>
    <string name="location">Location</string>
    <string name="back_arrow_button2">Back Arrow Button</string>
    <string name="diagnostics1">Diagnostics</string>
    <string name="odometer_image">Odometer Image</string>
    <string name="odometer">Odometer</string>
    <string name="_89_m">89 m</string>
    <string name="car_rectangle">Car Rectangle</string>
    <string name="car_image">Car Image</string>
    <string name="car_data">Car data</string>
    <string name="car_arrow">Car Arrow</string>
    <string name="settings_rectangle">Settings Rectangle</string>
    <string name="settings_image">Settings Image</string>
    <string name="maintanence">Maintanence</string>
    <string name="settings_arrow">Settings Arrow</string>
    <string name="diagnostics_rectangle">Diagnostics Rectangle</string>
    <string name="diagnostics_image">Diagnostics Image</string>
    <string name="diagnostics">Diagnostics</string>
    <string name="diagnostics_arrow">Diagnostics Arrow</string>
    <string name="ap_car_image">AP Car image</string>
    <string name="_1_0">1.0</string>
    <string name="application_software_version">Application Software version</string>
    <string name="_1_2">1.2</string>
    <string name="adas_software_version">ADAS Software version</string>
    <string name="voltage">Voltage</string>
    <string name="connect">connect</string>
    <string name="_192_168_xxx_xxx">192.168.XXX.XXX</string>
    <string name="enter_ip_address">Enter ip address:</string>

    <string name="inside_undeline"><u>Inside</u></string>
    <string name="outside_undeline"><u>Outside</u></string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
</resources>
