<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#484A4B"
    tools:context="com.example.dervis.autonomous.Activities.MainActivity"
    tools:layout_editor_absoluteY="25dp">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/include"
        app:srcCompat="@color/infotivLightGray" />

    <include
        android:id="@+id/include"
        layout="@layout/car_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarInfotivIncluder" />

    <ImageView
        android:id="@+id/batteryStatusImg"
        android:layout_width="130dp"
        android:layout_height="66dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/battery_status_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarInfotivIncluder"
        app:srcCompat="@drawable/icon_main_battery" />

    <ImageView
        android:id="@+id/batteryStatus"
        android:layout_width="110dp"
        android:layout_height="0dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="14dp"
        android:background="@android:color/holo_green_dark"
        android:contentDescription="@string/battery_status"
        app:layout_constraintBottom_toBottomOf="@+id/batteryStatusImg"
        app:layout_constraintEnd_toEndOf="@+id/batteryStatusImg"
        app:layout_constraintTop_toTopOf="@+id/batteryStatusImg"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/voltageText"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginEnd="8dp"
        android:shadowColor="#000000"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:text="@string/voltage"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/batteryStatusImg"
        app:layout_constraintEnd_toStartOf="@+id/batteryStatusImg"
        app:layout_constraintTop_toTopOf="@+id/batteryStatusImg"
        app:layout_constraintVertical_bias="0.466" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <include
        android:id="@+id/toolbarInfotivIncluder"
        layout="@layout/toolbar_infotiv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/batteryStatusImg"
        app:srcCompat="@drawable/side_car_infotiv" />

</android.support.constraint.ConstraintLayout>
